# uxto-set-experiments

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  run_lookup_bench.sh  utxo_z_benchmark_summary_20250710_150136.csv  utxo_z_benchmark_summary_20250710_150503.csv
bench_scripts/: compare_ibd_benches.py
include/utxo/: common.hpp
output/graphs_50k/: utxo_statistics.txt
output/graphs_new/graphs/: segment_0_spent_statistics.txt  segment_100000_spent_statistics.txt  segment_150000_spent_statistics.txt  segment_200000_spent_statistics.txt  segment_250000_spent_statistics.txt  segment_300000_spent_statistics.txt  segment_350000_spent_statistics.txt  segment_400000_spent_statistics.txt  segment_50000_spent_statistics.txt  spent_utxo_statistics.txt  unspent_utxo_statistics.txt
py/: 0.parquet-converter.py  analysis.py  analysis2.py  check-model.py  evaluate_hotcold_model.py  fix_files.py  fix_files2.py  model-test1.py  model-train11.py  model-train13.py  model-train3.py  model-train4.py  model-train6.py  model-train8.py  split_spent_unspent.py
src/: 1.normalize-files.py  BCHScalingCapacity.md  analysis.py  analysis2.py  analyze_hotcold_distribution.py  bench_db copy.cpp  bench_db.cpp  bench_db_comparison.cpp  bench_lookup.cpp  check-model.py  common.hpp  common_db.hpp  common_utxo.hpp  evaluate_hotcold_model.py  evaluate_log_duration_model.py  evaluate_spend_probability_model.py  find_unspent.py  fix_files2.py  interprocess_multiple_v10.hpp  interprocess_multiple_v11.hpp  interprocess_multiple_v12.hpp  interprocess_multiple_v2.hpp  interprocess_multiple_v3.hpp  interprocess_multiple_v4 copy.hpp  interprocess_multiple_v4.hpp  interprocess_multiple_v5.hpp  interprocess_multiple_v6.hpp  interprocess_multiple_v7.hpp  interprocess_multiple_v8.hpp  interprocess_multiple_v9.hpp  leveldb_v1.hpp  log.hpp  main.cpp  migrate_to_leveldb.cpp  model-input-name.py  model-train.py  model-train10.py  model-train12.py  model-train13.py  model-train2.py  (+10 more)
third_party_new/parlayhash/old_parlay_hash/: parlay_hash.h  unordered_map.h  unordered_set.h
third_party_new/parlayhash/parlay_hash/: parlay_hash.h
